--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -44,6 +44,8 @@
 	},
 	"dependencies": {
 		"@wp-blocks/utils": "workspace:*",
+		"ini": "^4.1.0",
+		"yargs": "^17.7.2",
 		"prompts": "^2.4.2",
 		"sharp": "^0.32.1",
 		"svgo": "^3.0.2"
