--- a/packages/squashify/package.json
+++ b/packages/squashify/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wp-blocks/image",
+	"name": "@wp-blocks/squashify",
 	"version": "0.1.0",
 	"description": "A cli that compress images",
 	"license": "GPL-2.0-or-later",
@@ -7,14 +7,14 @@
 		"Erik Golinelli <erik@codekraft.it> (https://codekraft.it/)",
 		"John Hooks <bitmachina@outlook.com> (https://johnhooks.io/)"
 	],
-	"homepage": "https://github.com/wp-blocks/wp-blocks/tree/main/packages/image#readme",
+	"homepage": "https://github.com/wp-blocks/wp-blocks/tree/main/packages/squashify#readme",
 	"bugs": {
 		"url": "https://github.com/wp-blocks/wp-blocks/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/wp-blocks/wp-blocks.git",
-		"directory": "packages/image"
+		"directory": "packages/squashify"
 	},
 	"engines": {
 		"node": ">=14.16",
